--- a/code/app/src/main/res/layout/fragment_community.xml
+++ b/code/app/src/main/res/layout/fragment_community.xml
@@ -30,18 +30,15 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/community_dropDownMenuLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/white_border"
             android:hint="@string/filter_by_mood"
             android:textColorHint="@color/grey"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
-            app:boxStrokeWidth="10dp"
             app:endIconTint="@color/white"
             app:hintTextColor="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,6 +53,8 @@
                 android:dropDownHeight="wrap_content"
                 android:dropDownVerticalOffset="8dp"
                 android:padding="2dp"
+                android:paddingStart="16dp"
+                android:paddingLeft="16dp"
                 android:popupBackground="@color/white"
                 android:popupElevation="6dp"
                 android:textColor="@color/white"
