--- a/code/app/src/main/res/layout/fragment_user_login.xml
+++ b/code/app/src/main/res/layout/fragment_user_login.xml
@@ -41,6 +41,8 @@
         android:id="@+id/button_UserLoginFrag_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_white_back_button" />
