--- a/code/app/src/main/res/layout/fragment_user_sign_up.xml
+++ b/code/app/src/main/res/layout/fragment_user_sign_up.xml
@@ -28,6 +28,8 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/button_UserSignUpFrag_back"
         android:layout_width="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="16dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
