--- a/code/app/src/main/res/layout/activity_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_mood_event_details.xml
@@ -95,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:hint="@string/username"
+            android:hint="Mood State"
             android:textColor="#FFFFFF"
             android:textColorHint="#898888"
             android:textSize="20sp"
