--- a/code/app/src/main/res/layout/activity_search_user.xml
+++ b/code/app/src/main/res/layout/activity_search_user.xml
@@ -15,43 +15,62 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/searchbar_scrolling_view_behavior"
-            android:backgroundTint="@color/black_background"/>
+            android:backgroundTint="@color/black_background">
+
+            <SearchView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </androidx.core.widget.NestedScrollView>
 
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
-                app:title="Search Users"
-                app:titleCentered="true"
-                app:titleTextAppearance="@style/ToolbarTitleText"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@color/primary_blue"
-                android:minHeight="?attr/actionBarSize" />
+                android:minHeight="?attr/actionBarSize"
+                app:title="Search Users"
+                app:titleCentered="true"
+                app:titleTextAppearance="@style/ToolbarTitleText" />
 
             <!-- The anchored SearchBar; tapping it will expand the SearchView -->
-            <com.google.android.material.search.SearchBar
-                android:id="@+id/searchBar_SearchUserActivity_searchBar"
-                android:layout_width="match_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/search_layout"
+                android:layout_width="371dp"
                 android:layout_height="wrap_content"
-                app:titleTextColor="@color/white"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/white"
-                android:outlineSpotShadowColor="@color/white"
-                android:outlineAmbientShadowColor="@color/white"/>
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+
+                android:hint="search user"
+                android:textColorHint="@color/grey"
+                app:boxStrokeWidth="2dp"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/grey_button"
+                app:hintTextColor="@color/grey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dropDownMenuLayout">
+
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/search_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:boxStrokeColor="@android:color/white" />
+            </com.google.android.material.textfield.TextInputLayout>
+
         </com.google.android.material.appbar.AppBarLayout>
 
         <!-- The Material SearchView overlays the content when expanded -->
-        <com.google.android.material.search.SearchView
-            android:id="@+id/searchView_SearchUserActivity_searchView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAppearance="@style/Platform.MaterialComponents.Light"
-            android:textColor="@color/white"
-            app:layout_anchor="@id/searchBar_SearchUserActivity_searchBar"
-            app:queryBackground="@color/black_background" />
 
         <!-- RecyclerView to show filtered results -->
         <androidx.recyclerview.widget.RecyclerView
