--- a/code/app/src/main/res/layout/activity_search_user.xml
+++ b/code/app/src/main/res/layout/activity_search_user.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     android:background="@color/black_background">
 
+
+
     <!-- CoordinatorLayout that holds the search components and RecyclerView -->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
 
         <!-- Scrolling container -->
         <androidx.core.widget.NestedScrollView
@@ -21,6 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </androidx.core.widget.NestedScrollView>
+
+
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -37,16 +43,20 @@
                 app:titleCentered="true"
                 app:titleTextAppearance="@style/ToolbarTitleText" />
 
+
+
             <!-- The anchored SearchBar; tapping it will expand the SearchView -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/search_layout"
-                android:layout_width="371dp"
+                android:layout_width="420dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
 
-                android:hint="search user"
+
+
+                android:hint="@string/search_user"
                 android:textColorHint="@color/grey"
                 app:boxStrokeWidth="2dp"
                 app:endIconMode="clear_text"
@@ -57,9 +67,10 @@
                 app:layout_constraintTop_toBottomOf="@id/dropDownMenuLayout">
 
 
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/search_edit_text"
-                    android:layout_width="match_parent"
+                    android:layout_width="405dp"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
@@ -67,6 +78,10 @@
                     android:textSize="16sp"
                     app:boxStrokeColor="@android:color/white" />
             </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
 
         </com.google.android.material.appbar.AppBarLayout>
 
