--- a/code/app/src/main/res/layout/activity_user_followed.xml
+++ b/code/app/src/main/res/layout/activity_user_followed.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_background"
+    android:id="@+id/user_followed"
     tools:context=".view.HomeMyMoodsFrag">
 
 
