Changed colors of app

--- a/code/app/src/main/res/layout/activity_add_mood_event.xml
+++ b/code/app/src/main/res/layout/activity_add_mood_event.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="72dp"
         android:fontFamily="monospace"
         android:text="@string/mood_event"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/select_photo"
-        android:backgroundTint="@color/primary_blue"
+        android:textColor="@color/mimi_pink"
+        android:backgroundTint="@color/primary_dark_grape"
         app:layout_constraintBottom_toTopOf="@id/textview_ActivityAddMoodEvent_selectimagetext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +75,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
         android:text="@string/mood_add_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_ActivityAddMoodEvent_selectimagetext" />
@@ -99,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="@string/trigger_add_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/editText_ActivityAddMoodEvent_triggerInput"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,9 +113,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="32dp"
-        android:background="@color/text_box_background"
         android:backgroundTint="#282727"
-        android:backgroundTintMode="src_over"
+        android:background="@color/text_box_background"
         android:hint="@string/trigger_add_mood_edittext"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +128,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:text="@string/social_situation_add_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/spinner_ActivityAddMoodEvent_socialsituation"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="@string/geolocation_optional_add_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_ActivityAddMoodEvent_socialsituation" />
 
@@ -166,7 +166,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="15dp"
         android:text="@string/public_mood_entry_add_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintBottom_toTopOf="@+id/button_ActivityAddMoodEvent_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -181,7 +181,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/primary_blue"
+        android:backgroundTint="@color/primary_dark_grape"
         android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
