--- a/code/app/src/main/res/layout/activity_admin.xml
+++ b/code/app/src/main/res/layout/activity_admin.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="20dp"
             android:textStyle="bold"
             android:text="@string/welcome_administrator"
-            android:textColor="@color/white"
+            android:textColor="@color/mimi_pink"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,8 @@
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="7dp"
             android:text="@string/logout"
-            android:backgroundTint="@color/primary_blue"
+            android:textColor="@color/mimi_pink"
+            android:backgroundTint="@color/primary_dark_grape"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -82,11 +83,11 @@
     <TextView
         android:id="@+id/textView2"
         android:textStyle="bold"
+        android:textColor="@color/mimi_pink"
         android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Approve Moods"
-        android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/button_adminPage_setTriggerWords"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,8 +108,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Trigger Words"
+        android:textColor="@color/mimi_pink"
         android:layout_marginRight="10dp"
-        android:backgroundTint="@color/primary_blue"
+        android:backgroundTint="@color/primary_dark_grape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
 
