--- a/code/app/src/main/res/layout/activity_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_mood_event_details.xml
@@ -56,9 +56,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="monospace"
+
         android:text="@string/your_mood_details"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@id/imagebutton_ActivityMoodEventDetails_editbutton"
         app:layout_constraintStart_toEndOf="@id/imagebutton_ActivityMoodEventDetails_backbutton"
@@ -83,7 +83,7 @@
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="-16dp"
             android:background="#282727"
-            app:layout_constraintBottom_toBottomOf="@id/commentButton"
+            app:layout_constraintBottom_toBottomOf="@id/button_ActivitYMoodEventDetails_commentButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:hint="Mood State"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/mimi_pink"
             android:textColorHint="#898888"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/imageview_ActivityMoodEventDetails_moodimage"
@@ -159,12 +159,13 @@
             app:layout_constraintTop_toBottomOf="@+id/textview_ActivityMoodEventDetails_dateandtime" />
 
         <Button
-            android:id="@+id/commentButton"
+            android:id="@+id/button_ActivitYMoodEventDetails_commentButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:backgroundTint="#22238B"
+            android:backgroundTint="@color/primary_dark_grape"
             android:text="@string/comments_mood_details"
+            android:textColor="@color/mimi_pink"
             app:layout_constraintEnd_toEndOf="@+id/imageview_ActivityMoodEventDetails_uploadedphoto"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="@+id/imageview_ActivityMoodEventDetails_uploadedphoto"
@@ -179,7 +180,7 @@
             android:backgroundTint="@color/black_background"
             android:scaleType="centerCrop"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@id/commentButton"
+            app:layout_constraintBottom_toTopOf="@id/button_ActivitYMoodEventDetails_commentButton"
             app:layout_constraintEnd_toEndOf="@+id/view_ActivityMoodEventDetails_moodeventcontainer"
             app:layout_constraintStart_toStartOf="@+id/view_ActivityMoodEventDetails_moodeventcontainer"
             app:layout_constraintTop_toBottomOf="@+id/textview_ActivityMoodEventDetails_location" />
