--- a/code/app/src/main/res/layout/activity_user_followed.xml
+++ b/code/app/src/main/res/layout/activity_user_followed.xml
@@ -23,8 +23,8 @@
         android:id="@+id/button_fragmentUserFollowed_follow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/primary_blue"
-        android:textColor="@color/white"
+        android:backgroundTint="@color/primary_dark_grape"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_fragmentUserFollowed_Username" />
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/username_followed"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
