--- a/code/app/src/main/res/layout/fragment_follower_request.xml
+++ b/code/app/src/main/res/layout/fragment_follower_request.xml
@@ -13,10 +13,9 @@
         android:id="@+id/textview_FollowerRequestFrag_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="monospace"
         android:text="@string/follow_requests_follower_request"
         app:fontFamily="sans-serif-black"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="24sp"
         android:layout_margin="6dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:backgroundTint="@color/primary_blue"
+        app:backgroundTint="@color/primary_dark_grape"
+        android:backgroundTintMode="@color/primary_dark_grape"
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
