--- a/code/app/src/main/res/layout/fragment_mood_event_layout.xml
+++ b/code/app/src/main/res/layout/fragment_mood_event_layout.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/happy"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/imageview_fragmentmoodeventlayout_moodicon"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:minHeight="30dp"
             android:text="@string/reason_i_hit_chest_today"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
             app:layout_constraintTop_toBottomOf="@id/textview_fragmentmoodeventlayout_moodtitle"
             app:layout_constraintStart_toEndOf="@id/imageview_fragmentmoodeventlayout_moodicon"
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/social_situation_mood_event"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@id/imageview_fragmentmoodeventlayout_moodicon"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:text="@string/feb_01_2025"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
