--- a/code/app/src/main/res/layout/fragment_user_sign_up.xml
+++ b/code/app/src/main/res/layout/fragment_user_sign_up.xml
@@ -8,22 +8,19 @@
     tools:context=".view.UserLoginFrag"
     android:background="@color/black_background">
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/ImageView_LoginUserSelection_appTitle"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="80dp"
+        android:scaleType="centerCrop"
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/textView_UserSignUpFrag_apptitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:fontFamily=""
-        android:text="@string/moods_signup"
-        android:textColor="?attr/colorOnPrimary"
-        android:textSize="90sp"
-        android:textStyle="bold"
-        app:fontFamily="sans-serif-black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
+
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_moods_title" />
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/button_UserSignUpFrag_back"
@@ -40,8 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/primary_blue"
+        android:backgroundTint="@color/primary_dark_grape"
         android:text="@string/create_account_and_login"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textField_UserSignUpFrag_reEnterPassword" />
@@ -53,11 +51,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
         android:text="@string/sign_up_signup"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintEnd_toEndOf="@+id/textField_UserSignUpFrag_username"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/textField_UserSignUpFrag_username"
-        app:layout_constraintTop_toBottomOf="@+id/textView_UserSignUpFrag_apptitle" />
+        app:layout_constraintTop_toBottomOf="@+id/ImageView_LoginUserSelection_appTitle" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textField_UserSignUpFrag_username"
