--- a/code/app/src/main/res/color/selector.xml
+++ b/code/app/src/main/res/color/selector.xml
@@ -5,6 +5,6 @@
 <!-- Taken by: Ercel Angeles -->
 <!-- Taken on: March 24, 2025 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/primary_blue" android:state_focused="true"/>
+    <item android:color="@color/mimi_pink" android:state_focused="true"/>
     <item android:color="@color/grey"/>
 </selector>
