--- a/code/app/src/main/res/layout/activity_community_map.xml
+++ b/code/app/src/main/res/layout/activity_community_map.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout_communityMap"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#282727"
+    android:background="@color/primary_dark_grape"
     tools:context=".view.CommunityMapActivity">
 
     <ImageButton
@@ -26,11 +26,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="59dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:text="@string/community_map_community_map"
-        android:textColor="@android:color/white"
         android:textSize="24sp"
+        android:textColor="@color/mimi_pink"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_CommunityMapActivity_map"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageButton_CommunityMapActivity_back"
