--- a/code/app/src/main/res/layout/activity_edit_delete_mood.xml
+++ b/code/app/src/main/res/layout/activity_edit_delete_mood.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="15dp"
         android:text="@string/public_mood_entry_edit_delete_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintBottom_toTopOf="@+id/button_DeleteEditMoodActivity_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -27,13 +27,12 @@
         android:id="@+id/imageButton_DeleteEditMoodActivity_back"
         android:layout_width="48dp"
         android:layout_height="52dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="87dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:background="@null"
-        android:src="@drawable/ic_white_back_button"
         android:contentDescription="Back button"
+        android:src="@drawable/ic_white_back_button"
         android:translationY="15dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView_DeleteEditMoodActivity_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,8 +40,8 @@
         android:id="@+id/imageButton_DeleteEditMoodActivity_delete"
         android:layout_width="63dp"
         android:layout_height="57dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/delete_button_edit_delete_mood"
         android:maxWidth="100dp"
@@ -52,19 +51,18 @@
         android:translationY="10dp"
         app:backgroundTint="@color/black_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_DeleteEditMoodActivity_title"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_DeleteEditMoodActivity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="48dp"
-        android:fontFamily="monospace"
+        android:layout_marginTop="40dp"
         android:text="@string/mood_event_edit_delete_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="24sp"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,7 +82,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/select_photo"
-        android:backgroundTint="@color/primary_blue"
+        android:textColor="@color/mimi_pink"
+        android:backgroundTint="@color/primary_dark_grape"
         app:layout_constraintBottom_toTopOf="@id/textView_DeleteEditMoodActivity_selectImagetext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:text="@string/select_image_optional_edit_delete_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_DeleteEditMoodActivity_selectImage" />
@@ -107,7 +106,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="@string/trigger_edit_delete_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/editText_DeleteEditMoodActivity_triggerInput"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +119,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
         android:text="@string/mood_edit_delete_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView_DeleteEditMoodActivity_selectImagetext" />
@@ -163,7 +162,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:text="@string/social_situation_edit_delete_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
         app:layout_constraintStart_toStartOf="parent"
@@ -190,7 +189,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="@string/geolocation_optional_edit_delete_mood"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
@@ -201,8 +200,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/primary_blue"
+        android:backgroundTint="@color/primary_dark_grape"
         android:text="@string/save_edit_delete_mood"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switch_DeleteEditMoodActivity_geoSwitch"
