--- a/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
@@ -14,23 +14,22 @@
     Taken on: February 18, 2025
     -->
 
+
     <ImageButton
         android:id="@+id/imagebutton_ActivityFriendMoodEventDetails_backbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_width="48dp"
+        android:layout_height="52dp"
         android:layout_marginTop="24dp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:contentDescription="@string/go_back"
-        android:maxWidth="40dp"
-        android:maxHeight="40dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_white_back_button"
         android:translationY="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintBottom_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.666"
+        tools:layout_editor_absoluteX="16dp" />
 
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_title"
@@ -38,16 +37,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/friend_mood_details_edit_delete_mood"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="24sp"
-        android:layout_marginLeft="40dp"
-        app:layout_constraintStart_toEndOf="@+id/imagebutton_ActivityFriendMoodEventDetails_backbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_height="0dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:hint="@string/username"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/mimi_pink"
             android:textColorHint="#898888"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/imageview_ActivityFriendMoodEventDetails_moodimage"
@@ -91,7 +91,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="32dp"
             android:hint="@string/happy"
-            android:textColor="#D1D1D1"
+            android:textColor="@color/mimi_pink"
             android:textColorHint="#898888"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/imageview_ActivityFriendMoodEventDetails_moodimage"
@@ -158,8 +158,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:backgroundTint="#22238B"
+            android:backgroundTint="@color/primary_dark_grape"
             android:text="@string/comments_friend_mood"
+            android:textColor="@color/mimi_pink"
             app:layout_constraintEnd_toEndOf="@+id/view_ActivityFriendMoodEventDetails_moodeventcontainer"
             app:layout_constraintStart_toStartOf="@+id/view_ActivityFriendMoodEventDetails_moodeventcontainer"
             app:layout_constraintTop_toBottomOf="@id/imageview_ActivityFriendMoodEventDetails_uploadedphoto" />
