--- a/code/app/src/main/res/layout/activity_search_user.xml
+++ b/code/app/src/main/res/layout/activity_search_user.xml
@@ -37,10 +37,11 @@
                 android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:background="@color/primary_blue"
+                android:background="@color/primary_dark_grape"
                 android:minHeight="?attr/actionBarSize"
                 app:title="Search Users"
                 app:titleCentered="true"
+                app:titleTextColor="@color/mimi_pink"
                 app:titleTextAppearance="@style/ToolbarTitleText" />
 
 
@@ -54,14 +55,15 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
 
-
+                app:boxStrokeColor="@color/selector"
+                app:hintTextColor="@color/selector"
+                app:cursorColor="@color/selector"
 
                 android:hint="@string/search_user"
                 android:textColorHint="@color/grey"
                 app:boxStrokeWidth="2dp"
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/grey_button"
-                app:hintTextColor="@color/grey"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/dropDownMenuLayout">
@@ -74,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
-                    android:textColor="@color/white"
+                    android:textColor="@color/mimi_pink"
                     android:textSize="16sp"
                     app:boxStrokeColor="@android:color/white" />
             </com.google.android.material.textfield.TextInputLayout>
