--- a/code/app/src/main/res/layout/activity_search_user_layout.xml
+++ b/code/app/src/main/res/layout/activity_search_user_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username_search_user"
-        android:textColor="@android:color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
