--- a/code/app/src/main/res/layout/activity_view_comments.xml
+++ b/code/app/src/main/res/layout/activity_view_comments.xml
@@ -43,10 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="monospace"
         android:text="@string/comments_comments"
         app:fontFamily="sans-serif-black"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/imagebutton_ActivityViewComments_addcommentsbutton"
         app:layout_constraintStart_toEndOf="@+id/imagebutton_ActivityViewComments_backbutton"
