--- a/code/app/src/main/res/layout/activity_view_comments_comment_layout.xml
+++ b/code/app/src/main/res/layout/activity_view_comments_comment_layout.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/comment_author_example"
-        android:textColor="@android:color/white"
+        android:textColor="@color/mimi_pink"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
