--- a/code/app/src/main/res/layout/fragment_community.xml
+++ b/code/app/src/main/res/layout/fragment_community.xml
@@ -39,12 +39,15 @@
             android:layout_marginEnd="16dp"
             android:hint="@string/filter_by_mood"
 
+            app:boxStrokeColor="@color/selector"
+            app:hintTextColor="@color/selector"
+            app:cursorColor="@color/selector"
 
+            app:boxStrokeWidth="2dp"
             android:textColorHint="@color/grey"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             app:endIconTint="@color/white"
-            app:hintTextColor="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +65,7 @@
                 android:paddingLeft="16dp"
                 android:popupBackground="@color/white"
                 android:popupElevation="6dp"
-                android:textColor="@color/white"
+                android:textColor="@color/mimi_pink"
                 android:textSize="16sp"
                 app:boxStrokeWidth="5dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -77,8 +80,12 @@
             android:layout_marginEnd="16dp"
             android:hint="@string/search_moods"
             android:textColorHint="@color/grey"
+
+            app:boxStrokeColor="@color/selector"
+            app:hintTextColor="@color/selector"
+            app:cursorColor="@color/selector"
+
             app:boxStrokeWidth="2dp"
-            app:hintTextColor="@color/grey"
             app:endIconTint="@color/grey_button"
             app:endIconMode="clear_text"
             app:layout_constraintTop_toBottomOf="@id/community_dropDownMenuLayout"
@@ -91,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
-                android:textColor="@color/white"
+                android:textColor="@color/mimi_pink"
                 android:textSize="16sp"
                 app:boxStrokeColor="@android:color/white" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -101,8 +108,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recent_week_community"
-            android:textColor="@color/custom_background_color"
-            android:buttonTint="@color/custom_light_grey"
+            android:textColor="@color/mimi_pink"
+            android:buttonTint="@color/mimi_pink"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/community_search_layout"
@@ -116,7 +123,7 @@
         android:id="@+id/community_header_container"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/primary_blue"
+        android:background="@color/primary_dark_grape"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -127,7 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="@string/community_community"
-            android:textColor="@color/white"
+            android:textColor="@color/mimi_pink"
             android:textSize="20sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
