--- a/code/app/src/main/res/layout/fragment_follower_layout.xml
+++ b/code/app/src/main/res/layout/fragment_follower_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username_follower_layout"
-        android:textColor="@android:color/white"
+        android:textColor="@color/mimi_pink"
         app:fontFamily="sans-serif-black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -26,9 +26,10 @@
         android:id="@+id/button_FragmentFollowerLayout_acceptButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/primary_blue"
+        android:backgroundTint="@color/primary_dark_grape"
         android:text="@string/accept_follower_layout"
         android:layout_margin="6dp"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_FragmentFollowerLayout_declineButton"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,9 +38,9 @@
         android:id="@+id/button_FragmentFollowerLayout_declineButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/mimi_pink"
         android:text="@string/decline_follower_layout"
-        android:textColor="@color/black"
+        android:textColor="@color/primary_dark_grape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
