--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -40,12 +40,14 @@
             android:hint="@string/filter_by_mood"
             android:textColorHint="@color/grey"
 
+            app:boxStrokeColor="@color/selector"
+            app:hintTextColor="@color/selector"
+            app:cursorColor="@color/selector"
 
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             app:boxStrokeWidth="2dp"
             app:endIconTint="@color/white"
-            app:hintTextColor="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -77,10 +79,13 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
 
+            app:boxStrokeColor="@color/selector"
+            app:hintTextColor="@color/selector"
+            app:cursorColor="@color/selector"
+
             android:hint="@string/search_moods"
             android:textColorHint="@color/grey"
             app:boxStrokeWidth="2dp"
-            app:hintTextColor="@color/grey"
             app:endIconTint="@color/grey_button"
             app:endIconMode="clear_text"
             app:layout_constraintTop_toBottomOf="@id/dropDownMenuLayout"
@@ -105,8 +110,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recent_week"
-            android:textColor="@color/custom_background_color"
-            android:buttonTint="@color/custom_light_grey"
+            android:textColor="@color/mimi_pink"
+            android:buttonTint="@color/mimi_pink"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/search_layout"
@@ -119,7 +124,7 @@
         android:id="@+id/constraintLayout3"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/primary_blue"
+        android:background="@color/primary_dark_grape"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -130,7 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="@string/welcome_username_home_moods"
-            android:textColor="@color/white"
+            android:textColor="@color/mimi_pink"
             android:textSize="20sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -153,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:backgroundTint="@color/primary_blue"
+        app:backgroundTint="@color/primary_dark_grape"
         app:tint="@color/white"
         app:srcCompat="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
