--- a/code/app/src/main/res/layout/fragment_item_community_mood.xml
+++ b/code/app/src/main/res/layout/fragment_item_community_mood.xml
@@ -14,7 +14,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:outlineAmbientShadowColor="@color/mimi_pink">
 
         <ImageView
             android:id="@+id/imageView_fragmentItemCommunity_moodicon"
@@ -29,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/username_comminity_mood"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/imageView_fragmentItemCommunity_moodicon"
@@ -41,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/mood_title_community_mood"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/imageView_fragmentItemCommunity_moodicon"
@@ -54,7 +55,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/trigger_description_community_mood"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
             app:layout_constraintStart_toEndOf="@id/imageView_fragmentItemCommunity_moodicon"
             app:layout_constraintTop_toBottomOf="@id/textView_fragmentItemCommunity_moodtitle"
@@ -68,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/social_situation_community_mood"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
             app:layout_constraintStart_toEndOf="@id/imageView_fragmentItemCommunity_moodicon"
             app:layout_constraintTop_toBottomOf="@id/textView_fragmentItemCommunity_trigger"
@@ -80,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/feb_01_2025_community_mood"
-            android:textColor="@android:color/white"
+            android:textColor="@color/mimi_pink"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
