--- a/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
@@ -20,6 +20,7 @@
         android:layout_width="48dp"
         android:layout_height="52dp"
         android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:contentDescription="@string/go_back"
@@ -27,9 +28,9 @@
         android:src="@drawable/ic_white_back_button"
         android:translationY="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_title"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.666"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintVertical_bias="0.666" />
 
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_title"
